# uestc-c2023-challenge-gomoku

./: .clang-format  .editorconfig  CMakeLists.txt  README.md
doc/: Gomoku.pptx  实验报告.md
src/: board.hpp  main.cpp  ui.hpp
src/player/: base.hpp  mcts.hpp  minimax.hpp
src/player/minimax/: evaluator.hpp  zobrist.hpp
